<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/phnum"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:autofillHints="no"
            android:background="@drawable/eview"
            android:ems="10"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:hint="@string/enter_phone_number"
            android:textColorHint="@color/colorAccent"
            android:inputType="phone"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonX"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/butt"
            android:text="@string/clear"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="clr"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_1"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_2"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_3"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_4"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/_5"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_5"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/_6"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_6"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/_7"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_7"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/_8"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_8"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/_9"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_9"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStar"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/star"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_star"/>

        <Button
            android:id="@+id/button0"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_0"/>

        <Button
            android:id="@+id/buttonHash"
            android:layout_width="8dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:background="@drawable/butt"
            android:text="@string/hash"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="btn_hash"/>
    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/butt"
        android:text="@string/dial"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:onClick="btn_dial"/>
</LinearLayout>

